--- a/client/navbar/buttons.css
+++ b/client/navbar/buttons.css
@@ -19,14 +19,15 @@
     padding: 0;
     margin-left: 30px;
     background-repeat: no-repeat;
+    background-size: 395px 371px;
 }
 
 .nav-button-explore {
-    background-position: -156px -375px;
+    background-position: -182px -322px;
 }
 
 .nav-button-heart {
-    background-position: -338px -349px;
+    background-position: -56px -322px;
 }
 
 .hearts-container {
@@ -37,7 +38,7 @@
 }
 
 .nav-button-profile {
-    background-position: -326px -249px;
+    background-position: -353px -26px;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -51,30 +52,36 @@
     }
 
     .nav-button-home {
-        background-position: -311.5px -349px;
+        background-position: -231px -322px;
     }
 
     .nav-button-home-active > div {
-        background-position: -286px -349px;
+        background-size: 395px 371px;
+        background-position: -250px -347px;
     }
 
     .nav-button-search {
-        background-position: -104px -375px;
+        background-size: 395px 371px;
+        background-position: -75px -347px;
     }
 
     .nav-button-search-active > div {
-        background-position: -78px -375px;
+        background-size: 395px 371px;
+        background-position: -50px -347px;
     }
 
     .nav-button-explore-active > div {
-        background-position: -234px -349px;
+        background-size: 395px 371px;
+        background-position: -159px -322px;
     }
 
     .nav-button-heart-active > div {
-        background-position: -130px -349px;
+        background-size: 395px 371px;
+        background-position: -31px -322px;
     }
 
     .nav-button-profile-active > div {
-        background-position: -26px -375px;
+        background-size: 395px 371px;
+        background-position: 0 -347px;
     }
 }
