--- a/client/navbar/navbar.css
+++ b/client/navbar/navbar.css
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 75px;
+    height: 60px;
     background: #ffffff;
     border-bottom: 1px solid #e6e6e6;
     transition: top 0.3s;
@@ -28,7 +28,7 @@
     justify-content: center;
     flex-direction: row;
     align-items: stretch;
-    padding: 20px 40px;
+    /* padding: 20px 40px; */
     box-sizing: border-box;
 }
 
@@ -53,7 +53,7 @@
 
 @media (min-width: 320px) and (max-width: 480px) {
     .navbar {
-        height: 60px;
+        height: 44px;
     }
 
     .hide-nav {
@@ -66,6 +66,7 @@
 
     .nav-header {
         display: flex !important;
+        font-size: 30px;
     }
 
     .nav-header > a {
@@ -84,7 +85,7 @@
         display: flex;
         position: fixed;
         bottom: 0;
-        height: 60px;
+        height: 44px;
         width: 100%;
         background: #ffffff;
         border-top: 1px solid #e6e6e6;
