--- a/client/navbar/searchBox.css
+++ b/client/navbar/searchBox.css
@@ -31,7 +31,8 @@
     margin-right: 6px;
     height: 10px;
     width: 10px;
-    background-position: -389px -269px;
+    background-position: -379px -161px;
+    background-size: 395px 371px;
 }
 
 .search-box > div > input {
@@ -58,7 +59,8 @@
     padding: 0;
     margin: 0;
     background-repeat: no-repeat;
-    background-position: -401px -94px;
+    background-position: -176px -113px;
+    background-size: 395px 371px;
 }
 
 .search-meme-container {
